Moved footer, fixed layout bugs on gallery and about pages

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -32,6 +32,7 @@ html {
   overflow-y: scroll;
 }
 body {
+  position: relative;
   margin: 30px auto;
   width: 100%;
   height: 100%;
@@ -59,7 +60,7 @@ body {
   }
   ul {
     width: 100%;
-    height: 79%;
+    height: 75%;
     overflow: hidden;
   }
 }
@@ -129,7 +130,7 @@ body {
 }
 
 footer {
-  position: fixed;
+  position: absolute;
   bottom: 10px;
   left: 30px;
   color: #777;
@@ -286,6 +287,9 @@ a {
     width: 30%;
     top: 50px;
   }
+  .gallery .col-left, .about .col-left {
+    top: 20px;
+  }
   .col-right {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -321,11 +325,8 @@ a {
   /*
   * Project gallery
   */
-  .gallery {
-    position: fixed;
-    .col-left {
-      position: relative;
-    }
+  .gallery .col-left {
+    position: relative;
   }
 }
 @media all and (min-width: 1281px) {
